--- a/helm-charts/telemetry-agent/templates/resources.yaml
+++ b/helm-charts/telemetry-agent/templates/resources.yaml
@@ -7,7 +7,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: telemetry
-  namespace: telemetry  
+  namespace: {{.Values.TELEMETRY_AGENT_NAMESPACE}}  
 ---
 apiVersion: v1
 kind: Secret
@@ -24,7 +24,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: telemetry
-  namespace: telemetry
+  namespace: {{.Values.TELEMETRY_AGENT_NAMESPACE}}
 roleRef:
   kind: ClusterRole
   name: cluster-admin
@@ -40,7 +40,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: telemetry-user
-  namespace: telemetry
+  namespace: {{.Values.TELEMETRY_AGENT_NAMESPACE}}
 ---
 apiVersion: v1
 kind: Secret
@@ -53,7 +53,7 @@ type: kubernetes.io/service-account-token
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: telemetry
+  namespace: {{.Values.TELEMETRY_AGENT_NAMESPACE}}
   name: telemetry-user-role
 rules:
   - apiGroups: ["*"]
@@ -68,7 +68,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: telemetry-user
-  namespace: telemetry
+  namespace: {{.Values.TELEMETRY_AGENT_NAMESPACE}}
 roleRef:
   kind: Role
   name: telemetry-user-role
