--- a/helm-charts/telemetry-agent/values.yaml
+++ b/helm-charts/telemetry-agent/values.yaml
@@ -3,6 +3,8 @@
 # Declare variables to be passed into your templates.
 #
 ############ RELEVANT ############
+TELEMETRY_AGENT_NAMESPACE: telemetry
+
 TELEMETRY_AGENT_CFG_CONFIGMAP: telemetry-agent-config
 TELEMETRY_AGENT_K8S_ADMINCONF_CONFIGMAP: telemetry-agent-k8s-adminconf
 TELEMETRY_AGENT_K8S_CERT_CONFIGMAP: telemetry-agent-k8s-cert
@@ -10,7 +12,7 @@ TELEMETRY_AGENT_K8S_CERT_CONFIGMAP: telemetry-agent-k8s-cert
 TELEMETRY_AGENT_DAEMONSET_NAME: telemetry-agent-daemonset
 TELEMETRY_AGENT_SELECTOR_APP_NAME: telemetry-agent
 TELEMETRY_AGENT_CONTAINER_NAME: telemetry-agent-container
-IMAGE: amitpandia/telemetry-agent:v0.7
+IMAGE: amitpandia/telemetry-agent:v0.11
 
 TOPIC_PODDETAILS: podDetails-2
 TOPIC_SVCDETAILS: svcDetails-2
