--- a/helm-charts/telemetry-agent/templates/resources.yaml
+++ b/helm-charts/telemetry-agent/templates/resources.yaml
@@ -1,3 +1,7 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: {{.Values.TELEMETRY_AGENT_NAMESPACE}}       
 ##############################
 #    for internal access
 ##############################
