--- a/helm-charts/telemetry-agent/templates/configmap.yaml
+++ b/helm-charts/telemetry-agent/templates/configmap.yaml
@@ -6,6 +6,7 @@ metadata:
 data:
   config.cfg: |
    {
+        "Namespace": "{{.Values.TELEMETRY_AGENT_NAMESPACE}}",
         "KafkaEnable": true,
         "NodeStatsEnable": false,
         "AppStatsEnable": false,
