config support for logRotate in telemetry-agent
Signed-off-by: Mahesh Jadhav <jadhav.mahesh073@gmail.com>

--- a/helm-charts/telemetry-agent/templates/configmap.yaml
+++ b/helm-charts/telemetry-agent/templates/configmap.yaml
@@ -17,6 +17,11 @@ data:
         "K8sSvcStatsEnable": true,
         "K8sDeploymentStatsEnable": false,
         "K8sAppDetailsStatsEnable": false,
+        "LoggerCfg": {
+                "LogRotate": true,
+                "Size": 104857600,
+                "DurationSec": 86400
+        },
         "KafkaCfg": {
                 "KafkaTopic": "{{.Values.TOPIC_FLOWSTATS}}"
         },
