enable AppStats in config
Signed-off-by: Mahesh Jadhav <jadhav.mahesh073@gmail.com>

--- a/helm-charts/telemetry-agent/templates/configmap.yaml
+++ b/helm-charts/telemetry-agent/templates/configmap.yaml
@@ -9,7 +9,7 @@ data:
         "Namespace": "{{.Values.TELEMETRY_AGENT_NAMESPACE}}",
         "KafkaEnable": true,
         "NodeStatsEnable": false,
-        "AppStatsEnable": false,
+        "AppStatsEnable": true,
         "DummyStatsEnable": false,
         "KubeStateMetricsStatsEnable": false,
         "K8sNodeStatsEnable": true,
