added external ip and pv manifests for wordpress-mysql

--- a/helm-charts/wordpress-mysql/templates/wordpress-deployment.yaml
+++ b/helm-charts/wordpress-mysql/templates/wordpress-deployment.yaml
@@ -10,6 +10,8 @@ spec:
   selector:
     app: {{.Values.APP_NAME}}
     tier: frontend
+  externalIPs:
+    - {{.Values.EXTERNAL_IP}}
   type: LoadBalancer
 ---
 apiVersion: v1
