--- a/helm-charts/wordpress-mysql/values.yaml
+++ b/helm-charts/wordpress-mysql/values.yaml
@@ -16,6 +16,11 @@ MYSQL_PV_NAME: mysql-pv-claim
 MYSQL_STORAGE: 1Gi
 MYSQL_IMAGE: mysql:5.6
 MYSQL_VOLUME_MOUNT: mysql-persistent-storage
+
+EXTERNAL_IP: 1.2.3.4
+MYSQL_STORAGE_MOUNT_PATH: "/mnt/ceph/mysql-img"
+WORDPRESS_STORAGE_MOUNT_PATH: "/mnt/ceph/wordpress-img"
+
 #################################
 
 replicaCount: 1
