--- a/helm-charts/wordpress-mysql-stateful/templates/mysql-statefulset.yaml
+++ b/helm-charts/wordpress-mysql-stateful/templates/mysql-statefulset.yaml
@@ -12,22 +12,8 @@ spec:
     tier: mysql
   clusterIP: None
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: {{.Values.MYSQL_PV_NAME}}
-  labels:
-    app: {{.Values.APP_NAME}}
-spec:
-  storageClassName: {{.Values.STORAGE_CLASS_NAME}}
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: {{.Values.MYSQL_STORAGE}}
----
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{.Values.MYSQL_APP_NAME}}
   labels:
@@ -68,8 +54,15 @@ spec:
         volumeMounts:
         - name: {{.Values.MYSQL_VOLUME_MOUNT}}
           mountPath: /var/lib/mysql
-      volumes:
-      - name: {{.Values.MYSQL_VOLUME_MOUNT}}
-        persistentVolumeClaim:
-          claimName: {{.Values.MYSQL_PV_NAME}}
+  volumeClaimTemplates:
+  - metadata:
+      name: {{.Values.MYSQL_VOLUME_MOUNT}}
+      labels:
+        app: {{.Values.APP_NAME}}
+    spec:
+      storageClassName: {{.Values.STORAGE_CLASS_NAME}}
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: {{.Values.MYSQL_STORAGE}}
 
