--- a/helm-charts/readwritetxtfile/templates/demo-app-service.yaml
+++ b/helm-charts/readwritetxtfile/templates/demo-app-service.yaml
@@ -15,5 +15,7 @@ spec:
     targetPort: 80
   selector:
     io.kompose.service: demo-app
+  externalIPs:
+    - 192.168.4.50
 status:
   loadBalancer: {}
