add externalIPs to wse helm chart
Signed-off-by: Stig Thormodsrud <stig@platinasystems.com>

--- a/helm-charts/wse/templates/service.yaml
+++ b/helm-charts/wse/templates/service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: wse-rtmp
 spec:
   type: {{ .Values.service.type }}
+{{- if .Values.service.externalIPs }}
+  externalIPs:
+{{ toYaml .Values.service.externalIPs | indent 4 }}
+{{- end }}
   ports:
     - port: 1935
       targetPort: rtmp
