--- a/helm-charts/wse/templates/service.yaml
+++ b/helm-charts/wse/templates/service.yaml
@@ -22,6 +22,10 @@ metadata:
   name: wse-admin
 spec:
   type: {{ .Values.service.type }}
+{{- if .Values.service.externalIPs }}
+  externalIPs:
+{{ toYaml .Values.service.externalIPs | indent 4 }}
+{{- end }}
   ports:
     - port: 8086
       targetPort: admin
