accept accessModes as dynamic value
Signed-off-by: Mahesh Jadhav <mahesh.jadhav@calsofthq.com>

--- a/helm-charts/wordpress-mysql-stateful/templates/mysql-statefulset.yaml
+++ b/helm-charts/wordpress-mysql-stateful/templates/mysql-statefulset.yaml
@@ -61,7 +61,7 @@ spec:
         app: {{.Values.APP_NAME}}
     spec:
       storageClassName: {{.Values.STORAGE_CLASS_NAME}}
-      accessModes: [ "ReadWriteOnce" ]
+      accessModes: [ "{{.Values.ACCESS_MODE}}" ]
       resources:
         requests:
           storage: {{.Values.MYSQL_STORAGE}}
