--- a/helm-charts/wordpress-mysql-stateful/templates/wordpress-statefulset.yaml
+++ b/helm-charts/wordpress-mysql-stateful/templates/wordpress-statefulset.yaml
@@ -66,7 +66,7 @@ spec:
         app: {{.Values.APP_NAME}}
     spec:
       storageClassName: {{.Values.STORAGE_CLASS_NAME}}
-      accessModes: [ "ReadWriteOnce" ]
+      accessModes: [ "{{.Values.ACCESS_MODE}}" ]
       resources:
         requests:
           storage: {{.Values.WORDPRESS_STORAGE}}
