--- a/helm-charts/wordpress-mysql-stateful/values.yaml
+++ b/helm-charts/wordpress-mysql-stateful/values.yaml
@@ -18,6 +18,7 @@ MYSQL_IMAGE: mysql:5.6
 MYSQL_VOLUME_MOUNT: mysql-persistent-storage
 REPLICAS: 2
 EXTERNAL_IP: 3.3.3.3
+ACCESS_MODE: ReadWriteOnce
 #################################
 
 replicaCount: 1
