--- a/helm-charts/wordpress-mysql-stateful/templates/mysql-statefulset.yaml
+++ b/helm-charts/wordpress-mysql-stateful/templates/mysql-statefulset.yaml
@@ -19,7 +19,7 @@ metadata:
   labels:
     app: {{.Values.APP_NAME}}
 spec:
-  replicas: {{.Values.REPLICAS}}
+  replicas: 1
   storageClassName: {{.Values.STORAGE_CLASS_NAME}}
   selector:
     matchLabels:
