--- a/helm-charts/telemetry-agent/values.yaml
+++ b/helm-charts/telemetry-agent/values.yaml
@@ -12,7 +12,7 @@ TELEMETRY_AGENT_K8S_CERT_CONFIGMAP: telemetry-agent-k8s-cert
 TELEMETRY_AGENT_DAEMONSET_NAME: telemetry-agent-daemonset
 TELEMETRY_AGENT_SELECTOR_APP_NAME: telemetry-agent
 TELEMETRY_AGENT_CONTAINER_NAME: telemetry-agent-container
-IMAGE: amitpandia/telemetry-agent:v0.11
+IMAGE: amitpandia/telemetry-agent:v0.13-test
 
 TOPIC_PODDETAILS: podDetails-2
 TOPIC_SVCDETAILS: svcDetails-2
