PCC-3181 added support for kclusterdetails
added config for k8s cluster stats

added topic for cluster details

Update configmap.yaml

update log level to info

disable node,pod,svc stats

Enabled svc stats

update image version

update log level to error

--- a/helm-charts/telemetry-agent/values.yaml
+++ b/helm-charts/telemetry-agent/values.yaml
@@ -12,11 +12,12 @@ TELEMETRY_AGENT_K8S_CERT_CONFIGMAP: telemetry-agent-k8s-cert
 TELEMETRY_AGENT_DAEMONSET_NAME: telemetry-agent-daemonset
 TELEMETRY_AGENT_SELECTOR_APP_NAME: telemetry-agent
 TELEMETRY_AGENT_CONTAINER_NAME: telemetry-agent-container
-IMAGE: amitpandia/telemetry-agent:v0.11
+IMAGE: amitpandia/telemetry-agent:v0.13
 
 TOPIC_PODDETAILS: podDetails-2
 TOPIC_SVCDETAILS: svcDetails-2
 TOPIC_NODEDETAILS: nodeDetails-2
+TOPIC_CLUSTERDETAILS: kclusterdetails
 TOPIC_DEPLOYMENTDETAILS: deploymentDetails
 TOPIC_APPDETAILS: appDetails
 TOPIC_FLOWSTATS: flowStats
