--- a/helm-charts/telemetry-agent/templates/configmap.yaml
+++ b/helm-charts/telemetry-agent/templates/configmap.yaml
@@ -10,8 +10,9 @@ data:
         "AppStatsEnable": false,
         "DummyStatsEnable": false,
         "KubeStateMetricsStatsEnable": false,
-        "K8sNodeStatsEnable": true,
-        "K8sPodStatsEnable": true,
+        "K8sClusterStatsEnable": true,
+        "K8sNodeStatsEnable": false,
+        "K8sPodStatsEnable": false,
         "K8sSvcStatsEnable": true,
         "K8sDeploymentStatsEnable": false,
         "K8sAppDetailsStatsEnable": false,
@@ -37,6 +38,9 @@ data:
                 "StatList": ["kube_pod_container_resource_requests_memory_bytes","kube_pod_container_resource_limits_memory_bytes","kube_pod_container_resource_requests_cpu_cores","kube_pod_container_resource_limits_cpu_cores","kube_node_status_capacity_cpu_cores","kube_node_status_allocatable_cpu_cores","kube_node_status_capacity_memory_bytes","kube_node_status_allocatable_memory_bytes"],
                 "Topic": "ksm1"
         },
+        "K8sClusterConfig": {
+                "Topic": "{{.Values.TOPIC_CLUSTERDETAILS}}"
+        },        
         "K8sNodeConfig": {
                 "Topic": "{{.Values.TOPIC_NODEDETAILS}}"
         },
@@ -54,7 +58,7 @@ data:
         }
     }
   loglevel: |-
-    error  
+    error
   varnishstats.txt: |-
     MAIN.sess_conn
     MAIN.sess_drop
