--- a/helm-charts/telemetry-agent/templates/configmap.yaml
+++ b/helm-charts/telemetry-agent/templates/configmap.yaml
@@ -10,6 +10,7 @@ data:
         "AppStatsEnable": false,
         "DummyStatsEnable": false,
         "KubeStateMetricsStatsEnable": false,
+        "K8sClusterStatsEnable": true,
         "K8sNodeStatsEnable": true,
         "K8sPodStatsEnable": true,
         "K8sSvcStatsEnable": true,
