--- a/helm-charts/telemetry-agent/templates/configmap.yaml
+++ b/helm-charts/telemetry-agent/templates/configmap.yaml
@@ -11,8 +11,8 @@ data:
         "DummyStatsEnable": false,
         "KubeStateMetricsStatsEnable": false,
         "K8sClusterStatsEnable": true,
-        "K8sNodeStatsEnable": false,
-        "K8sPodStatsEnable": false,
+        "K8sNodeStatsEnable": true,
+        "K8sPodStatsEnable": true,
         "K8sSvcStatsEnable": true,
         "K8sDeploymentStatsEnable": false,
         "K8sAppDetailsStatsEnable": false,
