--- a/helm-charts/telemetry-agent/templates/resources.yaml
+++ b/helm-charts/telemetry-agent/templates/resources.yaml
@@ -18,7 +18,7 @@ metadata:
 type: kubernetes.io/service-account-token
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: telemetry
 subjects:
@@ -72,3 +72,4 @@ subjects:
 roleRef:
   kind: Role
   name: telemetry-user-role
+  apiGroup: rbac.authorization.k8s.io
